test/TestSuite/Syntax/Errors/date_in_range.tjp
project test "Test" "1.0" 2007-08-19 +2m 

task t "T" {
# MARK: error 5 date_in_range
  start 2007-08-18
}

